--- a/components/Radio/radio.module.scss
+++ b/components/Radio/radio.module.scss
@@ -52,13 +52,11 @@
   padding: 0 0 0.5rem;
 
   legend {
-    color: $dark-gray4;
     display: block;
     margin-bottom: 1rem;
   }
 
   label {
-    display: inline;
     padding-inline-end: 1rem;
   }
 }
